--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -45,7 +45,7 @@
             </div>
             
             <div class="about-image">
-                <img src="{% static 'images/about-image.jpg' %}" alt="Наш магазин" class="about-img">
+                <img src="{% static 'images/i.webp' %}" alt="Наш магазин" class="about-img">
                 <div class="image-caption">
                     <i class="fas fa-store"></i>
                     <p>Наш магазин в Москве</p>
